very subtle spell check

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -477,7 +477,7 @@ As we can see, there is a clear tendency to have better performance across small
 
 
 
-\subsection{HyperParameters}
+\subsection{Hyperparameters}
 
 
 
