--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -151,7 +151,7 @@ On the other hand the variance of an estimator should measure the spread of the 
 
 Note that with these definitions the variance is an operator defined only for the estimator and which is null only when the predictor is a constant value for any training set. As such, it is unchanged by new data. The bias on the other hand is an operator built from the systemic values of $Y$ and $\hat{f}$ and is null only if both of these are equal.
 
-\todo{fix EZECORRECTION tags}
+% \todo{fix EZECORRECTION tags}
 
 The generalized bias-variance decomposition now takes the following form, where the bias and variance of the squared loss are replaced with more general properties such as the variance effect and the systematic effect:
 
