--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -235,7 +235,7 @@ Measures can then be applied outside of the endemic region, and directed towards
 Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
 However, where available, we show the resulting classifier's test performance across three scores: $Accuracy$, $F1$ and $ROC AUC$.
 
-
+\begin{table}
 \caption{Table comparing cross validated results for all of the classifiers run in this work. For each task, we show the triplet of $Accuracy$, $F1$ and $ROC AUC$ test scores after a full cross validation procedures on the learner.}
 \label{tab:all_results}
 \centering
