Removed empty page for easier on screen reading

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,11 @@
 %       Created: 08 Feb 2017
 %   Description: Main Template File for Thesis
 %===============================================================================
-\documentclass[a4paper,11pt,leqno]{book}
+
+% \documentclass[a4paper,11pt,leqno]{book}
+
+% opcion
+\documentclass[a4paper,11pt,leqno,openany]{book}
 
 \input{preamble.tex}
 
@@ -16,7 +20,7 @@
 \begin{document}
 
 \frontmatter
-  \halftitlepg
+%  \halftitlepg
   \titlepg
   \copyrightpg
   \ifdef{\dedication}{\dedication}{}
