Small modifications in the abstract and resumen

--- a/abstract.tex
+++ b/abstract.tex
@@ -8,8 +8,11 @@
 \label{cha:abstract}
 
 The Chagas disease continues to represent a global epidemiological problem, particularly for the South American continent.
-Current control methods focus solely on the vector-infested regions. Still, human mobility patterns represent an important factor in the congenital transmission of this disease. 
-Its spread from high to low infested regions is strengthened by seasonal and long-term migrations. Using the geo-referenced mobile phone data made available by GranData Labs, and in collaboration with the Mundo Sano Foundation, the objective of this work is to assess the relationship of calling patterns and user behavior, with migrations. 
+Current control methods focus solely on the vector-infested regions. 
+%Still, human mobility patterns represent an important factor in the congenital transmission of this disease. 
+%Its spread from high to low infested regions is strengthened by seasonal and long-term migrations. 
+Still, human mobility patterns represent an important factor in the geographical spread of this disease, since its spread from high to low infested regions is strengthened by seasonal and long-term migrations. 
+Using anonymized mobile phone data, and in collaboration with the Mundo Sano Foundation, the objective of this work is to assess the relationship of calling patterns and user behavior, with migrations. 
 This analysis, in turn, helps for Chagas prevention efforts in Argentina and Mexico, where we identified possible endemic foci outside of vector-infested regions. 
 To do this, we evaluated different Machine Learning techniques as probabilistic models. 
 More than 150 features were extracted from the data and related to the probability of having lived or moved from an endemic region. 
