--- a/preface.tex
+++ b/preface.tex
@@ -5,7 +5,10 @@
 % Last Modified: 08 Feb 2017
 %   Description: Resumen de la Tesis
 %===============================================================================
-\chapter{Res\'umen}
+\chapter{Resumen}
 \label{cha:resumen}
 
-Al día de hoy, la enfermedad del Chagas sigue siendo una epidemia de escala global. Esta se encuentra extendida en gran medida a lo largo de todo el continente americano y con métodos de control que se concentran sobre las regiones infestadas por el vector de transmisión. Sin embargo, los patrones de movilidad humana también representan un factor importante en la transmisión congénita de esta enfermedad. Su propagación de áreas de alta a baja infestación son fortalecidas por migraciones de tipo estacionales o de larga duración. Usando los datos georreferenciados de llamados por telefonía celular puesta a disposición por GranData Labs, y en colaboración con la Fundación Mundo Sano, el objetivo de este trabajo es el de evaluar la relación entre el uso celular y el comportamiento social, con el de las migraciones humanas. Este análisis servirá para ayudar en los esfuerzos de prevención del Chagas en Argentina y México, donde se lograron identificar posibles focos endémicos de esta enfermedad, fuera de la zona de infestación vectorial. Para hacer esto, utilizamos diferentes técnicas de Aprendizaje Automática como modelos probabilísticos. Más de 150 atributos fueron extraídos de los datos y contrastados con la probabilidad de haber migrado desde la zona endémica. Los resultados aquí expuestos sirven para discriminar aquellos atributos más relevantes en la detección de estos movimientos, especialmente en usuarios con fuertes lazos sociales con la región endémica o con un patrón alto de movilidad. Con visualizaciones geograficas de estas relaciones sociales, logramos mostrar locaciones tradicionalmente no endémicas donde potencialmente se encuentren mayores tasas de prevalencia.
+Al día de hoy, la enfermedad del Chagas sigue siendo una epidemia de escala global. Esta se encuentra extendida en gran medida a lo largo de todo el continente americano y con métodos de control que se concentran sobre las regiones infestadas por el vector de transmisión. 
+%Sin embargo, los patrones de movilidad humana también representan un factor importante en la transmisión congénita de esta enfermedad. Su propagación de áreas de alta a baja infestación son fortalecidas por migraciones de tipo estacionales o de larga duración. 
+Sin embargo, los patrones de movilidad humana también representan un factor importante en la propagación geográfica de esta enfermedad. Su propagación de áreas de alta a baja infestación es fortalecida por migraciones de tipo estacionales o de larga duración. 
+Usando datos anonimizados de llamados por telefonía celular, y en colaboración con la Fundación Mundo Sano, el objetivo de este trabajo es el de evaluar la relación entre el uso celular y el comportamiento social, con el de las migraciones humanas. Este análisis servirá para ayudar en los esfuerzos de prevención del Chagas en Argentina y México, donde se lograron identificar posibles focos endémicos de esta enfermedad, fuera de la zona de infestación vectorial. Para hacer esto, utilizamos diferentes técnicas de Aprendizaje Automática como modelos probabilísticos. Más de 150 atributos fueron extraídos de los datos y contrastados con la probabilidad de haber migrado desde la zona endémica. Los resultados aquí expuestos sirven para discriminar aquellos atributos más relevantes en la detección de estos movimientos, especialmente en usuarios con fuertes lazos sociales con la región endémica o con un patrón alto de movilidad. Con visualizaciones geograficas de estas relaciones sociales, logramos mostrar locaciones tradicionalmente no endémicas donde potencialmente se encuentren mayores tasas de prevalencia.
